# ncore

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  ATTRIBUTIONS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  GITHUB_MIGRATION.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  environment.yml  pyproject.toml  requirements.in  requirements.txt
bazel/flags/: BUILD.bazel
bazel/format/: BUILD.bazel  ruff_isort.sh
bazel/sphinx/: BUILD.bazel  defs.bzl  sphinx_wrapper.py
bazel/typing/: BUILD.bazel  aspects.bzl  mypy.ini  mypy.patch  mypy_version.txt
dependencies/instance_segmentation/: BUILD.bazel  run_instance_segmentation.py
dependencies/instance_segmentation/pretrained_models/: model_final_ba17b9.pkl
dependencies/surface_reconstruction/: BUILD.bazel  run_surface_reconstruction.py  trim-surface.py
dependencies/surface_reconstruction/PoissonRecon/: Makefile
docs/: BUILD.bazel  README.md  conf.py  data.md  data_formats.md  index.rst  running_NGP.md
docs/_static/: custom.css  style.css
docs/_templates/: layout.html
docs/apis/: data.rst  data.v3.rst  data.v4.rst  data_converter.rst  install.rst  ncore.rst  sensors.rst
docs/backup/: data.md
docs/conversions/: index.rst
docs/conversions/colmap/: colmap.rst
docs/conversions/pai/: pai.rst
docs/conversions/waymo/: waymo.rst
docs/data/: conventions.rst  formats.rst  overview.rst  sensor_models.rst
docs/notes/: conventions.rst  running_NGP.rst
docs/tools/: data_conversion.rst  data_vis.rst  data_visualization.rst  ncore_sequence_meta.rst  ncore_vis.rst  ngp_export.rst  reconstruction.rst  running_NGP.rst  segmentation.rst
docs/tutorial/: data_loading.ipynb  data_sanity_check.ipynb  lidar_model_estimation.ipynb  lidar_preprocess.ipynb
dsai/: BUILD.bazel  README.md
dsai/data/: BUILD.bazel  __init__.py  py.typed  test.py
dsai/data/v3/: BUILD.bazel  __init__.py
dsai/geometry/: BUILD.bazel  __init__.py
dsai/impl/av_utils/: BUILD.bazel  __init__.py  av_utils.cpp
dsai/impl/common/: BUILD.bazel  common.py  common_test.py  nvidia_utils.py  transformations.py  visualization.py
dsai/impl/data/: BUILD.bazel  data3.py  data3_test.py  stores.py  stores_test.py  types.py
dsai/impl/data_converter/: BUILD.bazel  carter_deepmap3.py  data_converter.py  nvidia_deepmap3.py  nvidia_maglev3.py  waymo3.py
dsai/impl/sensors/: BUILD.bazel  camera.py  camera_test.py
dsai/sensors/: BUILD.bazel  __init__.py  test.py
lib/: BUILD.bazel  CMakeLists.txt  __init__.py  av_utils.cpp  setup.py  test_av_utils.py  utils.cpp
lib/av_utils.egg-info/: PKG-INFO  SOURCES.txt
modules/ncore_waymo/: .bazelrc  BUILD.bazel  MODULE.bazel  NOTICE  README.md  bazel-bin  bazel-ncore_waymo  bazel-out  bazel-testlogs  pyproject.toml
modules/ncore_waymo/ncore_waymo/: BUILD.bazel  converter.py  deps.py  utils.py
ncore/: BUILD.bazel  PYPI_README.md  README.md  py.typed
ncore/data/: BUILD.bazel  __init__.py  test.py
ncore/data/v3/: BUILD.bazel  __init__.py  test.py
ncore/data/v4/: BUILD.bazel  __init__.py  test.py
ncore/data_converter/: BUILD.bazel  __init__.py  test.py
ncore/geometry/: BUILD.bazel  __init__.py  test.py
ncore/impl/av_utils/: BUILD.bazel  __init__.py  av_utils.cpp
ncore/impl/common/: BUILD.bazel  common.py  common_test.py  nvidia_utils.py  transformations.py  transformations_test.py  util.py  visualization.py
ncore/impl/data/: BUILD.bazel  compat.py  data.py  data3.py  data3_test.py  data4.py  data4_test.py  stores.py  stores_test.py  types.py  types_test.py  util.py  util_test.py
ncore/impl/data_converter/: BUILD.bazel  base.py  carter_deepmap3.py  data_converter.py  nvidia_deepmap3.py  nvidia_maglev3.py  waymo3.py  waymo_utils.py
ncore/impl/sensors/: BUILD.bazel  camera.py  camera_test.py  common.py  lidar.py  lidar_test.py
ncore/sensors/: BUILD.bazel  __init__.py  test.py
scripts/: BUILD  BUILD.bazel  convert_raw_data.py  driveSimAi_to_ngp.py  dsai_export_image.py  dsai_export_ply.py  dsai_export_ply_files.py  dsai_extract_segmentation.py  dsai_project_pc_to_img.py  dsai_sequence_meta.py  dsai_surface_rec.py  dsai_to_ngp.py  dsai_visualize_labels.py  ncore_3to4.py  ncore_chunk.py  ncore_export_camera.py  ncore_export_colored_pc.py  ncore_export_image.py  ncore_export_ply.py  ncore_extract_segmentation.py  ncore_project_pc_to_img.py  ncore_sequence_meta.py  ncore_surface_rec.py  ncore_to_map_transform.py  ncore_to_ngp.py  ncore_visualize_labels.py  nvidia_to_ngp.py  nvidia_to_ngp_backup.py  project_pc_to_img.py  rgb_ray_mesh_intersection.py  util.py  visualization.py
scripts/ci/: cache_tag.sh
scripts/converter/: BUILD.bazel  __init__.py  py.typed
scripts/data_converter/: BUILD.bazel  README.md  __init__.py  cli.py
scripts/data_converter/waymo/: BUILD.bazel  NOTICE  README.md  deps.py  utils.py  waymo.py
scripts/experimental/: BUILD.bazel  convert_deepmap_egomotion.py  dsai_downsample_camera.py  dsai_import_labels.py  dsai_ngp_360_novel_views.py  dsai_to_map_transform.py  ncore_3to4.py  ncore_chunk.py  ncore_project_pc_to_img.py  ncore_rgb_ray_mesh_intersection.py  ncore_sequence_meta.py  ncore_subrange.py  ncore_surface_rec.py  ncore_to_map_transform.py  ncore_visualize_labels.py  untangle_traj_roi.py
scripts/experimental/deepmap/: BUILD.bazel  convert_deepmap_egomotion.py
scripts/experimental/jupyter/: BUILD.bazel  README.md  jupyter.py
scripts/experimental/sd-data/: BUILD.bazel  README.md  nvidia_maglev_sd.py  sd_shards.py
scripts/preprocess_lidar/: preprocess.ipynb
scripts/v1/: BUILD.bazel  dsai_to_ngp.py
scripts/v2/: BUILD.bazel  dsai_export_ply.py  dsai_surface_rec.py  dsai_visualize_labels.py
src/: BUILD  BUILD.bazel  __init__.py  common.py  estimate-normals-and-reconstruct.py  extract_lidar_point_cloud_with_normals.py  nvidia_utils.py  testbinary.py  transformations.py  trim-surface.py  utils.py  visualization.py  waymo_utils.py
src/cpp/av_utils/: BUILD.bazel  (+2 more)
src/dataset_converter/: BUILD.bazel  __init__.py  nvidia.py  nvidia_deepmap.py  nvidia_maglev.py  waymo_open.py
src/dsai/: BUILD.bazel
src/dsai_lib/: README.md
(+253 files in other folders)
