# Copyright (c) 2025 NVIDIA CORPORATION.  All rights reserved.

"""
This module defines the dependencies and extensions for the ncore project.
"""

module(
    name = "ncore",
    repo_name = "ncore_repo",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")
bazel_dep(name = "aspect_rules_lint", version = "1.9.1")
bazel_dep(name = "rules_mypy", version = "0.40.0")
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")

## rules_python
bazel_dep(name = "rules_python", version = "1.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
python.toolchain(
    python_version = "3.8",
)
use_repo(python, "python_3_11", "python_3_8", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_index_url = "https://pypi.org/simple",  # download wheels via bazel downloader instead of pip
    hub_name = "ncore_pip_deps",
    python_version = "3.11",
    requirements_lock = "//3rdparty/python:requirements_3_11.txt",
)
pip.parse(
    experimental_index_url = "https://pypi.org/simple",  # download wheels via bazel downloader instead of pip
    hub_name = "ncore_pip_deps",
    python_version = "3.8",
    requirements_lock = "//3rdparty/python:requirements_3_8.txt",
)
use_repo(pip, "ncore_pip_deps")

## rules_multitool (for ruff formatter)
bazel_dep(name = "rules_multitool", version = "1.0.0")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
use_repo(multitool, "multitool")

## rules_oci
bazel_dep(name = "rules_oci", version = "2.2.0")
single_version_override(
    module_name = "rules_oci",
    patch_strip = 1,
    patches = ["@@//:3rdparty/oci/oci.patch"],
    version = "2.2.0",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ncore_dev_image",
    digest = "sha256:a7ef63cd668559421ce7ceb70cc2d6c454c761cd4fa309f8e96db1be2968c69a",
    image = "gitlab-master.nvidia.com:5005/nrs/ncore",
)
use_repo(oci, "ncore_dev_image")

## external / test data
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "test-data-v3-shards",
    sha256 = "cdb766ba178548f9307b1458bb408f4f92ba1557dd34bb30dac2a303749ab783",
    urls = ["https://gitlab-master.nvidia.com/api/v4/projects/61004/packages/generic/test-data-v3-shards/0.7/test-data-v3-shards.tar.gz"],
)

http_archive(
    name = "test-data-v4",
    sha256 = "4be8c5e6409a772dac27389612f224d5c214f89d46a545bd87cd524212a7889f",
    urls = ["https://gitlab-master.nvidia.com/api/v4/projects/61004/packages/generic/test-data-v4/0.1/test-data-v4.tar.gz"],
)
