# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""
This module defines the dependencies and extensions for the ncore project.
"""

module(
    name = "ncore",
    repo_name = "ncore_repo",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")
bazel_dep(name = "aspect_rules_lint", version = "1.9.1")
bazel_dep(name = "rules_mypy", version = "0.40.0")
bazel_dep(name = "rules_uv", version = "0.88.0")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")

## rules_python
bazel_dep(name = "rules_python", version = "1.2.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
python.toolchain(
    python_version = "3.8",
)
use_repo(python, "python_3_11", "python_3_8", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    experimental_index_url = "https://pypi.org/simple",  # download wheels via bazel downloader instead of pip
    hub_name = "ncore_pip_deps",
    python_version = "3.11",
    requirements_lock = "//3rdparty/python:requirements_3_11.txt",
)
pip.parse(
    experimental_index_url = "https://pypi.org/simple",  # download wheels via bazel downloader instead of pip
    hub_name = "ncore_pip_deps",
    python_version = "3.8",
    requirements_lock = "//3rdparty/python:requirements_3_8.txt",
)
use_repo(pip, "ncore_pip_deps")

## rules_multitool (for ruff formatter)
bazel_dep(name = "rules_multitool", version = "1.0.0")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
use_repo(multitool, "multitool")

## external / test data
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# NOTE: GitHub migration - URLs updated from GitLab Generic Package Registry to GitHub Packages
# GitLab (old): https://gitlab-master.nvidia.com/api/v4/projects/61004/packages/generic/test-data-v4/0.2/test-data-v4.tar.gz
# GitHub Packages requires authentication - configure ~/.netrc with GitHub credentials
http_archive(
    name = "test-data-v4",
    sha256 = "c9f52f182994b5c4027f74f380b75f05bc64bdc15ccc2934558f373b44606ae9",
    urls = ["https://maven.pkg.github.com/NVIDIA/ncore/com/nvidia/ncore/test-data-v4/0.2/test-data-v4-0.2.tar.gz"],
)

## Documentation data (external repo with large binary assets)
# NOTE: GitHub migration - URLs updated from GitLab Generic Package Registry to GitHub Packages
# GitLab (old): https://gitlab-master.nvidia.com/api/v4/projects/61004/packages/generic/ncore-docs-data/0.2/ncore-docs-data.tar.gz
http_archive(
    name = "ncore_docs_data",
    sha256 = "32495526e9ef8a8892a24549c97fe1c5251c498dfc313f3ddb75385211ec4d55",
    urls = ["https://maven.pkg.github.com/NVIDIA/ncore/com/nvidia/ncore/ncore-docs-data/0.2/ncore-docs-data-0.2.tar.gz"],
)
