# Copyright (c) 2022 NVIDIA CORPORATION.  All rights reserved.

workspace(name = "ncore_repo")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

## Python rules
http_archive(
    name = "rules_python",
    sha256 = "5868e73107a8e85d8f323806e60cad7283f34b32163ea6ff1020cf27abef6036",
    strip_prefix = "rules_python-0.25.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.25.0/rules_python-0.25.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_multi_toolchains")

py_repositories()

# Register python toolchain

python_register_multi_toolchains(
    name = "python",
    default_version = "3.10",
    python_versions = [
        "3.8",
        "3.10",
    ],
)

# Local pip dependencies
load("@python//3.10:defs.bzl", interpreter_3_10 = "interpreter")
load("@python//3.8:defs.bzl", interpreter_3_8 = "interpreter")
load("@rules_python//python:pip.bzl", "package_annotation", "pip_parse")

pip_parse(
    name = "pip_deps",
    timeout = 3600,
    annotations = {
        "numpy": package_annotation(
            additive_build_content = """
# Make numpy headers available to C++ rules
cc_library(
    name = 'numpy',
    includes = ['site-packages/numpy/core/include'],
    hdrs = glob(['site-packages/numpy/core/include/numpy/*.h']),
)
""",
        ),
    },
    python_interpreter_target = interpreter_3_10,
    quiet = False,
    requirements_lock = "//3rdparty/python:requirements_3_10.txt",
)

load("@pip_deps//:requirements.bzl", "install_deps")

install_deps()

pip_parse(
    name = "pip_deps_3_8",
    timeout = 3600,
    annotations = {
        "numpy": package_annotation(
            additive_build_content = """
# Make numpy headers available to C++ rules
cc_library(
    name = 'numpy',
    includes = ['site-packages/numpy/core/include'],
    hdrs = glob(['site-packages/numpy/core/include/numpy/*.h']),
)
""",
        ),
    },
    python_interpreter_target = interpreter_3_8,
    quiet = False,
    requirements_lock = "//3rdparty/python:requirements_3_8.txt",
)

load("@pip_deps_3_8//:requirements.bzl", install_pip_deps_3_8 = "install_deps")

install_pip_deps_3_8()

# mypy-integration
http_archive(
    name = "mypy_integration",
    patch_args = ["-p1"],
    patches = [
        "@//:bazel/typing/mypy.patch",
    ],
    sha256 = "cf94c102fbaccb587eea8de5cf1cb7f55c5c74396a2468932c3a2a4df989aa1d",
    strip_prefix = "bazel-mypy-integration-0.4.0",
    url = "https://github.com/thundergolfer/bazel-mypy-integration/archive/refs/tags/0.4.0.tar.gz",
)

load(
    "@mypy_integration//repositories:repositories.bzl",
    mypy_integration_repositories = "repositories",
)

mypy_integration_repositories()

pip_parse(
    name = "mypy_integration_pip_deps",
    python_interpreter_target = interpreter_3_10,
    requirements_lock = "//bazel/typing:mypy_version.txt",
)

load("@mypy_integration_pip_deps//:requirements.bzl", install_deps_mypy = "install_deps")

install_deps_mypy()

## Docker rules
http_archive(
    name = "io_bazel_rules_docker",
    sha256 = "b1e80761a8a8243d03ebca8845e9cc1ba6c82ce7c5179ce2b295cd36f7e394bf",
    urls = ["https://github.com/bazelbuild/rules_docker/releases/download/v0.25.0/rules_docker-v0.25.0.tar.gz"],
)

load(
    "@io_bazel_rules_docker//repositories:repositories.bzl",
    container_repositories = "repositories",
)

container_repositories()

load("@io_bazel_rules_docker//repositories:deps.bzl", container_deps = "deps")

container_deps(go_repository_default_config = "@//:WORKSPACE.bazel")

load(
    "@io_bazel_rules_docker//python3:image.bzl",
    _py_image_repos = "repositories",
)

_py_image_repos()

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_pull",
)

container_pull(
    name = "ncore_dev_container",
    timeout = 7200,
    digest = "sha256:a7ef63cd668559421ce7ceb70cc2d6c454c761cd4fa309f8e96db1be2968c69a",
    registry = "gitlab-master.nvidia.com:5005",
    repository = "nrs/ncore",
)

## Protobuf rules
http_archive(
    name = "com_google_protobuf",
    sha256 = "25680843adf0c3302648d35f744e38cc3b6b05a6c77a927de5aea3e1c2e36106",
    strip_prefix = "protobuf-3.19.4",
    urls = ["https://github.com/google/protobuf/archive/v3.19.4.zip"],
)

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")

protobuf_deps()

## Dependencies
load("//bazel/repo:repos.bzl", "register_repositories")

register_repositories()

## bazel-starlib / buildifier
load("@cgrindel_bazel_starlib//:deps.bzl", "bazel_starlib_dependencies")

bazel_starlib_dependencies()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("@buildifier_prebuilt//:deps.bzl", "buildifier_prebuilt_deps")

buildifier_prebuilt_deps()

load("@buildifier_prebuilt//:defs.bzl", "buildifier_prebuilt_register_toolchains")

buildifier_prebuilt_register_toolchains()

## rules_format - Code formatting rules (should be last to avoid toolchain re-definitions)

http_archive(
    name = "aspect_rules_format",
    patch_args = ["-p1"],
    patches = [
        "//3rdparty/aspect_rules_format:aspect_rules_format.patch",
    ],
    sha256 = "c8d04f68082c0eeac2777e15f65048ece2f17d632023bdcc511602f8c5faf177",
    strip_prefix = "bazel-super-formatter-2.0.0",
    url = "https://github.com/aspect-build/bazel-super-formatter/archive/refs/tags/v2.0.0.tar.gz",
)

load("@aspect_rules_format//format:repositories.bzl", format_dependencies = "rules_format_dependencies")

format_dependencies()

load("@rules_nodejs//nodejs:repositories.bzl", "DEFAULT_NODE_VERSION", "nodejs_register_toolchains")

nodejs_register_toolchains(
    name = "node",
    node_version = DEFAULT_NODE_VERSION,
)

load("@aspect_rules_format//format:dependencies.bzl", format_parse_dependencies = "parse_dependencies")

format_parse_dependencies()

# Should be LAST in WORKSPACE to avoid getting different versions of toolchains
load("@aspect_rules_format//format:toolchains.bzl", "format_register_toolchains")

format_register_toolchains()

load("@aspect_rules_format//:requirements.bzl", install_black = "install_deps")

install_black()
