# Copyright (c) 2022 NVIDIA CORPORATION.  All rights reserved.

load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("//bazel/sphinx:defs.bzl", "sphinx_html_gen", "sphinx_view")

sphinx_html_gen(
    name = "ncore",
    srcs = glob(["images/**"]) + glob(["notes/**"]) + glob(["_static/**"]) + glob(["_templates/**"]),
    config = "conf.py",
    index = "index.rst",
)

sphinx_view(
    name = "view_ncore",
    generator = "ncore",
)

bzlformat_pkg(name = "bzlformat")
