# Copyright (c) 2023 NVIDIA CORPORATION.  All rights reserved.

load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

# Collect all dependencies within the dsai.* subpackages to export in wheel
py_package(
    name = "dsai_pkg",
    packages = ["dsai"],
    deps = [
        "@dsai-repo//dsai/data:pylib",
        "@dsai-repo//dsai/data/v3:pylib",
        "@dsai-repo//dsai/geometry:pylib",
        "@dsai-repo//dsai/sensors:pylib",
    ],
)

# Export packages by creating wheel
py_wheel(
    name = "dsai_wheel",
    abi = "cp310",
    distribution = "dsai",
    homepage = "https://gitlab-master.nvidia.com/Toronto_DL_Lab/dsai",
    platform = "linux_x86_64",
    python_requires = ">=3.10",
    python_tag = "cp310",
    requires = [
        "numpy",
        "dataclasses_json",
        "pillow",
        "zarr",
        "cbor2",
        "scipy",
    ],
    version = "0.1.8",
    deps = [
        ":dsai_pkg",
    ],
)

bzlformat_pkg(name = "bzlformat")
