load("//3rdparty/numpyeigen:npe_add_module.bzl", "npe_codegen_function", "npe_codegen_module")
load("@rules_python//python:packaging.bzl", "py_wheel")
load("@rules_python//python:defs.bzl", "py_binary")
load("@pip_deps//:requirements.bzl", "requirement")

npe_codegen_function(
    name = "av_utils_codegen_function",
    src = ":utils.cpp",
    out = ":utils_function.cpp",
)

npe_codegen_module(
    name = "av_utils_codegen_module",
    src = ":utils.cpp",
    out = ":utils_module.cpp",
    module = "libav_utils_cc",
)

cc_binary(
    name = "av_utils_cc",
    srcs = [
        ":utils_function.cpp",
        ":utils_module.cpp",
    ],
    copts = [
        "-std=c++14",
    ],
    linkshared = True,
    deps = [
        "@numpyeigen//:npe",
    ],
)

py_library(
    name = "av_utils",
    srcs = [
        "__init__.py",
    ],
    data = [
        ":av_utils_cc",
    ],
    deps = [
        requirement("numpy"),
    ],
)

# REMOVE ME
py_binary(
    name = "test_av_utils",
    srcs = ["test_av_utils.py"],
    imports = ["."],
    deps = [
        ":av_utils",
        requirement("debugpy"),
    ],
)

# py_wheel(
#     name = "av_utils",
#     distribution = "av_utils",
#     python_tag = "py3",
#     version = "0.0.1",
#     deps = [
#         ":av_utils_cc",
#     ],
# )
