load("//3rdparty/numpyeigen:npe_add_module.bzl", "npe_codegen_function", "npe_codegen_module")
load("@rules_python//python:defs.bzl", "py_binary")
load("@pip_deps//:requirements.bzl", "requirement")

npe_codegen_function(
    name = "av_utils_codegen_function",
    src = ":av_utils.cpp",
    out = ":av_utils_function.cpp",
)

npe_codegen_module(
    name = "av_utils_codegen_module",
    src = ":av_utils.cpp",
    out = ":av_utils_module.cpp",
    module = "libav_utils_cc",
)

cc_binary(
    name = "av_utils_cc",
    srcs = [
        ":av_utils_function.cpp",
        ":av_utils_module.cpp",
    ],
    copts = [
        "-std=c++14",
    ],
    linkshared = True,
    deps = [
        "@numpyeigen//:npe",
    ],
)

py_library(
    name = "pylib",
    srcs = [
        "__init__.py",
    ],
    data = [
        ":av_utils_cc",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        requirement("numpy"),
    ],
)
