# Copyright (c) 2023 NVIDIA CORPORATION.  All rights reserved.

load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

# Proxy library to include PEP 561 type-marker
py_library(
    name = "pylib",
    data = ["py.typed"],
    visibility = ["//visibility:public"],
    deps = [
        "@ncore_repo//ncore/data:pylib",
        "@ncore_repo//ncore/data/v3:pylib",
        "@ncore_repo//ncore/geometry:pylib",
        "@ncore_repo//ncore/sensors:pylib",
    ],
)

# Collect all dependencies within the ncore.* subpackages to export in wheel
py_package(
    name = "ncore_pkg",
    packages = ["ncore"],
    deps = [
        "@ncore_repo//ncore:pylib",
    ],
)

# Export packages by creating wheel
py_wheel(
    name = "ncore_wheel",
    abi = "none",
    distribution = "ncore",
    homepage = "https://gitlab-master.nvidia.com/nrs/ncore",
    platform = "any",
    python_requires = ">=3.8",
    python_tag = "py3",
    requires = [
        "numpy",
        "dataclasses_json>=0.2.12",
        "pillow",
        "zarr>=2.12.0",
        "cbor2",
        "scipy",
        "torch",
    ],
    version = "0.10.2",
    deps = [
        ":ncore_pkg",
    ],
)

bzlformat_pkg(name = "bzlformat")
